✨ Refactor participation 및 매퍼